/// Copyright (c) 2021 Razeware LLC
///
/// Permission is hereby granted, free of charge, to any person obtaining a copy
/// of this software and associated documentation files (the "Software"), to deal
/// in the Software without restriction, including without limitation the rights
/// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
/// copies of the Software, and to permit persons to whom the Software is
/// furnished to do so, subject to the following conditions:
///
/// The above copyright notice and this permission notice shall be included in
/// all copies or substantial portions of the Software.
///
/// Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
/// distribute, sublicense, create a derivative work, and/or sell copies of the
/// Software in any work that is designed, intended, or marketed for pedagogical or
/// instructional purposes related to programming, coding, application development,
/// or information technology.  Permission for such use, copying, modification,
/// merger, publication, distribution, sublicensing, creation of derivative works,
/// or sale is expressly withheld.
///
/// This project and source code may use libraries or frameworks that are
/// released under various Open-Source licenses. Use of those libraries and
/// frameworks are governed by their own individual licenses.
///
/// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
/// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
/// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
/// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
/// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
/// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
/// THE SOFTWARE.

import XCTest

class GetAPetUITests: XCTestCase {
  func testExample() throws {
    let app = XCUIApplication()
    app.launch()
    let collectionViewsQuery = app.collectionViews

    collectionViewsQuery
      .buttons[
        NSLocalizedString(
          "Cats",
          bundle: Bundle(for: GetAPetUITests.self),
          comment: "")]
      .tap()

    collectionViewsQuery
      .cells["Max"]
      .tap()

    let explorerButton = app
      .navigationBars["GetAPet.PetDetailView"]
      .buttons[
        NSLocalizedString(
          "Pet Explorer",
          bundle: Bundle(for: GetAPetUITests.self),
          comment: "")]

    explorerButton.tap()

    collectionViewsQuery
      .cells["Oscar"]
      .tap()

    app
      .staticTexts[
        NSLocalizedString(
          "Adopt",
          bundle: Bundle(for: GetAPetUITests.self),
          comment: "")]
      .tap()

    collectionViewsQuery
      .buttons[
        NSLocalizedString(
          "Cats",
          bundle: Bundle(for: GetAPetUITests.self),
          comment: "")]
      .tap()

    collectionViewsQuery
      .cells["\(NSLocalizedString("Your pet:", bundle: Bundle(for: GetAPetUITests.self), comment: "")) Oscar"]
      .tap()

    explorerButton.tap()
  }
}
